using UnityEngine;
using System.Collections;

public class AnimationsVariables : MonoBehaviour {

    public const string m_interactibleObject_isUsed = "m_isUsed";
    public const string m_avatar_isWalking = "m_isWalking";
    public const string m_avatar_isInteracting = "m_isInteracting";
    public const string m_avatar_Use = "m_Use";
}
